13 Feb 2002 Fix TS intercept test - Paul Leisy
13 Feb 2002 Fix TXA for HOST PIC 04 fault on GUEST stack access - Paul Leisy
13 Feb 2002 Throw out Store PER when merged with null/supr rupts - Paul Leisy
13 Feb 2002 Make CS, CDS, CSP behave consistently: always store - Paul Leisy
11 Feb 2002 ISK, SSK missing 2k/4k check in 370 native - Paul Leisy
11 Feb 2002 Fix SIGP Initial Program Reset (S/370) - Jan Jaeger
08 Feb 2002 Fix RRB in 370 guest - Paul Leisy
06 Feb 2002 Fix cckdcdsk space/recovery/gap table malloc() - Greg Smith
05 Feb 2002 dasdinit utility support for specifying alternate cylinders - Fish
05 Feb 2002 dasdinit utility support for most every device type - Fish
05 Feb 2002 Asm assists for memory synchronization - Greg Smith
04 Feb 2002 Fix Ifetch PER flag in State Desc, Fix LCTL intercepts - Paul Leisy
04 Feb 2002 Fix very minor memory leaks in sockdev logic - Fish
03 Feb 2002 Close hercules configuration file after processing - Volker Bandke
03 Feb 2002 Added PGMPRDOS config parameter - Jay Maynard
03 Feb 2002 Performance tweaks - Greg Smith
01 Feb 2002 CTCI-W32 (Win32 CTCA protocol using WinPcap) - Fish
31 Jan 2002 Fix PER in guest for OPTION_CPU_UNROLL - Paul Leisy
30 Jan 2002 Fix SIE validity checks and intercepts - Paul Leisy
29 Jan 2002 Fix pending I/O interrupt when enabling I/O subclass - Jan Jaeger
28 Jan 2002 PER fix for BCTR and move #endif for FEATURE_PER2 - Paul Leisy
27 Jan 2002 Documentation updates for TCP/IP and Socket Readers - Roger Bowler
25 Jan 2002 Include Malcolm Beattie's dasdcat program - Roger Bowler
25 Jan 2002 More PER fixes for PR and addr wrap fix for MVCL - Paul Leisy
24 Jan 2002 PER fixes for PR and MVCL - Paul Leisy
20 Jan 2002 dasdinit can now create a cckd file - Greg Smith
17 Jan 2002 Add PER storage checks for TRAP accesses - Paul Leisy
17 Jan 2002 Fix PER rupt TEA for PC, PR and PT - Paul Leisy
16 Jan 2002 Synchronous I/O fixes - Greg Smith
15 Jan 2002 Add PER checks to MVCL - Paul Leisy